open ai model also

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ langchain = "==0.3.17"
 langgraph = "==0.2.69"
 langchain-community = "==0.3.16"
 langchain-ollama = "==0.2.3"
+openai = "==1.61.0"
+langchain-openai = "==0.3.3"
 
 [dev-packages]
 
