--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ SQLAlchemy = "==2.0.32"
 psycopg2-binary = "==2.9.9"
 alembic = "==1.13.2"
 jinja2 = "==3.1.4"
+Markdown = "==3.7"
 langchain = "==0.3.18"
 langgraph = "==0.2.70"
 langchain-community = "==0.3.17"
